# BasicBank

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/api/: api.py
app/api/endpoints/: account.py  customer.py  transfer.py
app/crud/: account.py  customer.py  transfer.py
app/models/: models.py
app/schemas/: schemas.py
dev-env/: postgres_compose.yml
tests/: conftest.py
tests/end2end/: test_api.py
tests/unit/: test_crud.py  test_models.py  test_schemas.py
